--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -1,6 +1,6 @@
-baseURL: "https://hugo-profile.netlify.app"
+baseURL: "https://rainer.tech"
 languageCode: "en-us"
-title: "Hugo Profile"
+title: "Rainer Fehrenbacher"
 theme: hugo-profile
 
 outputs:
@@ -29,11 +29,6 @@ Menus:
       title: Blog posts
       url: /blogs
       weight: 1
-    - identifier: gallery
-      name: Gallery
-      title: Blog posts
-      url: /gallery
-      weight: 2
     #Dropdown menu
     # - identifier: dropdown
     #   title: Example dropdown menu
@@ -53,8 +48,8 @@ Menus:
     #   weight: 2
 
 params:
-  title: "Hugo Profile"
-  description: Text about my cool site
+  title: "Rainer Fehrenbacher"
+  description: I made a website and this is it.
   # staticPath: ""  # The path to serve the static files from
   favicon: "/fav.png"
 
@@ -102,9 +97,9 @@ params:
   navbar:
     align: ms-auto # Left: ms-auto | center: mx-auto | right: me-auto | Default: ms-auto
     # brandLogo: "/logo.png" # Logo for the brand | default is the favicon variable
-    # showBrandLogo: false # Show brand logo in nav bar | default is true
-    brandName: "Hugo Profile" # Brand name for the brand | default is the title variable
-    disableSearch: false
+    showBrandLogo: false # Show brand logo in nav bar | default is true
+    brandName: "Rainer Fehrenbacher" # Brand name for the brand | default is the title variable
+    disableSearch: true
     # searchPlaceholder: "Search"
     menus:
       disableAbout: false
@@ -118,40 +113,45 @@ params:
   hero:
     enable: true
     intro: "Hi, my name is"
-    title: "Isabella."
-    subtitle: "I build things for the web"
-    content: "A passionate web app developer. I tend to make use of modern web technologies to build websites that looks great, feels fantastic, and functions correctly."
-    image: /images/hero.svg
+    title: "Rainer."
+    subtitle: "I build and maintain digital systems"
+    content: |-
+        A technology expert with a background in IT systems administration, non-profit administration, and political organizing. I build and maintain digital systems that enable progressive organizations to thrive.
+        
+        My preferred pronouns are he/him.
+    image: /rainer.png
     bottomImage:
       enable: true
     # roundImage: true # Make hero image circular | default false
-    button:
-      enable: true
-      name: "Resume"
-      url: "#"
-      download: true
-      newPage: false
+    #button:
+    #  enable: true
+    #  name: "Resume"
+    #  url: "#"
+    #  download: true
+    #  newPage: false
     socialLinks:
       fontAwesomeIcons:
-        - icon: fab fa-github
-          url: https://example.com
-        - icon: fab fa-twitter
-          url: https://example.com
+        - icon: fab fa-mastodon
+          url: https://climatejustice.social/@Rainer
       customIcons:
-        - icon: /fav.png
-          url: "https://example.com"
+        - icon: /bookwyrm.png
+          url: "https://bookwyrm.social/user/rainer"
 
   # About
   about:
     enable: true
     title: "About Me"
-    image: "/images/me.png"
+    image: "/rainer2.png"
     content: |-
-      I am a software developer with a passion for web development. I have a background in computer science and mathematics, and I have a strong interest in the intersection of technology and art. I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. 
-
-      I am currently working on a project that will be used to help people find the best way to get around the city.
+      I am a technology professional who resides on the stolen lands of the <a href="https://www.stolonation.bc.ca/" target="_blank">S’ólh Téméxw (Stó:lō)</a>, in the community colonially known as Abbotsford, BC in so-called Canada. I am currently working as a Digital Systems Specialist at [Salal Foundation](https://salalfoundation.ca). 
+      
+      
+      I am passionate about open-source software and decentralized social media platforms.
+      
+      
+      I also love bicycles, gardening, and sourdough baking. 
     skills:
-      enable: true
+      enable: false
       title: "Here are a few technologies I've been working with recently:"
       items:
         - "HTML"
@@ -163,12 +163,12 @@ params:
 
   # Experience
   experience:
-    enable: true
+    enable: false
     # title: "Custom Name"
     items:
       - job: "Senior Software Developer"
-        company: "Facebook"
-        companyUrl: "https://example.com"
+        company: "Salal Foundation"
+        companyUrl: "https://salalfoundation.ca"
         date: "Jan 2022 - present"
         featuredLink:
           enable: true
@@ -188,10 +188,8 @@ params:
           content: I worked as a software developer for more than one year in Amazon.
         content: |
           I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
-
           - Lead backend developer for a product.
           - Created a frontend design for a product.
-
       - job: "Junior Software Developer"
         company: "Apple"
         companyUrl: "https://example.com"
@@ -203,10 +201,8 @@ params:
           url: "https://example.com"
         content: |
           I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
-
           - Lead backend developer for a product.
           - Created a frontend design for a product.
-
       - job: "UI/UX Designer"
         company: "Netflix"
         companyUrl: "https://example.com"
@@ -216,10 +212,8 @@ params:
           url: "https://example.com"
         content: |
           I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
-
           - Lead backend developer for a product.
           - Created a frontend design for a product.
-
       - job: "Product Designer"
         company: "Google"
         companyUrl: "https://example.com"
@@ -228,7 +222,7 @@ params:
 
   # Education
   education:
-    enable: true
+    enable: false
     # title: "Custom Name"
     index: false
     items:
@@ -252,7 +246,6 @@ params:
           I Publiced two papers in the ACM SIGCHI Conference on Artificial Intelligence.
           - [Fast and Accurate Object Detection with a Single Convolutional Neural Network](https://example.com)
           - Face mask detection using a single convolutional neural network.
-
           Extracurricular Activities
             - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
@@ -271,7 +264,7 @@ params:
 
   # Achievements
   achievements:
-    enable: true
+    enable: false
     # title: "Custom Name"
     items:
       - title: Google kickstart runner
@@ -290,7 +283,7 @@ params:
 
   # projects
   projects:
-    enable: true
+    enable: false
     # title: "Custom Name"
     items:
       - title: Hugo Profile
@@ -343,8 +336,8 @@ params:
     enable: true
     # title: "Custom Name"
     content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
-    email: gurusabarisha@gmail.com
-    btnName: Mail me
+    email: rfehrenbacher@protonmail.com
+    btnName: Email me
     # formspree:
     #   enable: true # `contact.email` value will be ignored
     #   formId: abcdefgh # Take it from your form's endpoint, like 'https://formspree.io/f/abcdefgh'
@@ -358,12 +351,6 @@ params:
       title: Recent Posts
       enable: true
       disableFeaturedImage: false
-    socialNetworks:
-      github: https://github.com
-      linkedin: https://linkedin.com
-      twitter: https://twitter.com
-      instagram: https://instagram.com
-      facebook: https://facebook.com
 
   # List pages like blogs and posts
   listPages:
