Updated link to SF site

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -143,7 +143,7 @@ params:
     title: "About Me"
     image: "/rainer2.png"
     content: |-
-      I am a technology professional who resides on the stolen lands of the <a href="https://www.stolonation.bc.ca/" target="_blank">S’ólh Téméxw (Stó:lō)</a>, in the community colonially known as Abbotsford, BC in so-called Canada. I am currently working as a Digital Systems Specialist at [Salal Foundation](https://salalfoundation.ca). 
+      I am a technology professional who resides on the stolen lands of the <a href="https://www.stolonation.bc.ca/" target="_blank">S’ólh Téméxw (Stó:lō)</a>, in the community colonially known as Abbotsford, BC in Canada. I am currently working as a Digital Systems Specialist at <a href="https://www.salalfoundation.ca" target="_blank"> Salal Foundation</a>. 
       
       
       I am passionate about open-source software and decentralized social media platforms.
