--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -146,7 +146,7 @@ params:
       I am a technology professional who resides on the stolen lands of the <a href="https://www.stolonation.bc.ca/" target="_blank">S’ólh Téméxw (Stó:lō)</a>, in the community colonially known as Abbotsford, BC in Canada. I am currently working as a Digital Systems Specialist at <a href="https://www.salalfoundation.ca" target="_blank"> Salal Foundation</a>. 
       
       
-      I am passionate about open-source software and decentralized social media platforms.
+      I am passionate about open-source software and decentralized social media platforms like <a rel="me" href="https://climatejustice.social/@Rainer">Mastodon</a>.
       
       
       I also love bicycles, gardening, and sourdough baking. 
